# spotify-interlude

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
api_examples/: create_shortcut.py  hello.py  sched_example.py  spotify_api_example.py  volume_control_example.py  volume_sessions_example.py
interlude/: audio_session.py  cli.py  core.py  main.py  spotify.py
spotify_interlude/: cli.py  core.py  spotify.py
