[tool.poetry]
name = "interlude"
version = "0.1.0"
description = "Pause Spotify playback when other apps start making noise"
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "MIT"

[tool.poetry.scripts]
interlude = "interlude.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.20.0"
pycaw = "^20220416"
typer = "^0.6.1"
pydantic = "^1.9.1"
pywin32 = "^305"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
rope = "^1.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
